# maistro

./: .gitignore  README.md  directory_tree.txt  pyproject.toml  test_chat.py  test_memory.py
maistro/artists/dolla-llama/: persona.json
maistro/artists/dolla-llama/memory/feedback/: cabal_feedback.md  hallucinations_feedback.md  phone_sex_feedback.md  scrollin_feedback.md  trenches_feedback.md
maistro/artists/dolla-llama/memory/memory_db/: chroma.sqlite3
maistro/artists/dolla-llama/memory/personal/: favorite_songs.md
maistro/artists/dolla-llama/memory/songs/: cabal.md  hallucinations.md  phone_sex.md  scrollin.md  trenches.md
maistro/artists/dolla-llama/prompts/: character_prompt_20250305_220333.txt  latest_character_prompt.txt
maistro/artists/dolla_llama/: core.json  persona.json
maistro/artists/templates/: persona.json
maistro/core/: .cache  agent.py  analytics.py  cli.py
maistro/core/llm/: messages.py
maistro/core/memory/: __init__.py  manager.py  store.py  types.py
maistro/core/memory_db/dolla-llama/: chroma.sqlite3
maistro/core/persona/: generator.py
maistro/integrations/chat/: handler.py  prompt.py
maistro/integrations/dexscreener/: dexscreener.py
maistro/integrations/soundcloud/: soundcloud.py
maistro/integrations/spotify/: spotify.py
maistro/integrations/twitter/: README.md  __init__.py  api_post.py  auth.py  conversation_tracker.py  diagnose_login.py  dolla-llama_cache.db  dolla-llama_usage.json  mentions.py  post.py  scheduler.py  scraper.py  testScraper.py  test_login.py  test_login_fixed.py  test_mentions.py  test_scheduler.py  test_scraper.py  twitter.py  utils.py
maistro/integrations/twitter/cache/: dechambot_cookies.pkl
maistro/integrations/youtube/: engagement.py  oauthdiagnostic.py
